; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_waitq.c_waitq_is_global.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_waitq.c_waitq_is_global.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.waitq = type { i32 }

@global_waitqs = common dso_local global %struct.waitq* null, align 8
@g_num_waitqs = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @waitq_is_global(%struct.waitq* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.waitq*, align 8
  store %struct.waitq* %0, %struct.waitq** %3, align 8
  %4 = load %struct.waitq*, %struct.waitq** %3, align 8
  %5 = load %struct.waitq*, %struct.waitq** @global_waitqs, align 8
  %6 = icmp uge %struct.waitq* %4, %5
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = load %struct.waitq*, %struct.waitq** %3, align 8
  %9 = load %struct.waitq*, %struct.waitq** @global_waitqs, align 8
  %10 = load i32, i32* @g_num_waitqs, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.waitq, %struct.waitq* %9, i64 %11
  %13 = icmp ult %struct.waitq* %8, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %7
  store i32 1, i32* %2, align 4
  br label %16

15:                                               ; preds = %7, %1
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %15, %14
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
